// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidePanelManger DisclosureContainer should wrap disclosed content in a DisclosureContainer with default prompt options 1`] = `
Object {
  "acceptButtonText": "terraApplication.pendingActionPrompt.acceptButtonText",
  "buttonOrder": "rejectFirst",
  "content": undefined,
  "emphasizedAction": "reject",
  "endMessage": undefined,
  "rejectButtonText": "terraApplication.pendingActionPrompt.rejectButtonText",
  "startMessage": "terraApplication.pendingActionPrompt.singlePromptMessage",
  "title": "terraApplication.pendingActionPrompt.title",
}
`;

exports[`SlidePanelManger Snapshots should render with optional props 1`] = `
<SlidePanelManager
  disclosureAccessory={
    <div>
      Test Accessory
    </div>
  }
  panelBehavior="overlay"
  withDisclosureContainer={[Function]}
>
  <TestChild />
</SlidePanelManager>
`;

exports[`SlidePanelManger Snapshots should render with required props 1`] = `
<SlidePanelManager
  panelBehavior="overlay"
  withDisclosureContainer={[Function]}
>
  <TestChild />
</SlidePanelManager>
`;
